--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "eslint-vue3-typescript",
+  "name": "@MatheusFrez/eslint-vue3-typescript",
   "version": "1.0.0",
-  "description": "",
+  "description": "This package provides ESLint shared config files to use with vue3 and typescript",
   "main": "index.js",
   "repository": "https://github.com/MatheusFrez/eslint-vue3-typescript.git",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "@matheusfrez:registry": "https://npm.pkg.github.com"
   },
+  "release": { "branches": [ "main" ] },
+  "files": [
+    "rules",
+    "prettier",
+    "index.js"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "semantic-release"
